--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,8 +1,8 @@
 .form-control.transparent{
-  background-color: rgba(255, 255, 255, 0.13);
+  background-color: rgba(255, 255, 255, 0.43);
   border: 1px solid rgba(238, 238, 238, 0);
   border-bottom-color: rgba(238,238,238, 0.07);
-  color: #FDFCFD;
+  color: #000000;
   margin-bottom: 3px;
 }
 
@@ -21,17 +21,13 @@ body{
 /****************************************/
 
 /*****************section*****************/
-@media(max-width: 768px){
+/*@media(max-width: 768px){
   .content{
     position:relative;
     top:200px;
   }
   .form-login{
     text-align: webkit-center;
-  }
-  #login{
-    margin: 0;
-    height:
   }
   .form-group{
     width:auto !important;
@@ -48,17 +44,66 @@ body{
   .form-login{
     text-align: -webkit-center;
   }
+}*/
+
+.fg{
+  border-style: none !important;
+  -webkit-transition: background-color 0.6s;
+  transition: background-color 0.6s;
+  height: 50px;
 }
+
+.login-content{
+  width: 70% !important;
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+}
+#star{
+  width: 80% !important;
+  background-color:#4ABA51;
+}
+.login-logo{
+  width:10% !important;
+  border-top-right-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+  cursor: default !important;
+}
+#google-logo:hover{
+  background-color: #d9534f !important;
+}
+#facebook-logo:hover{
+  background-color: #337ab7 !important;
+}
+
 
 #login{
   margin-top:5px;
-  width: 440px;
-  height: 30px;
+  width: 80%;
+  height: 40px;
   text-align: center;
+}
+#first-input{
+  margin-top:2px;
+}
+#second-input{
+  margin-top:0;
+}
+.input-group{
+  width: 440px;
 }
 .input-group label{
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
+  width: 10%;
+  /*text-align: center;*/
+  display: inline-block;
+  float: none !important;
+}
+.input-group input{
+  width: 70% !important;
+  /*text-align: center;*/
+  display: inline-block;
+  float: none !important;
 }
 .fa{
     height: 40px;
@@ -69,23 +114,18 @@ body{
     padding: 1rem;
     cursor: default;
     float:left;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.5);
     border: 1px solid rgba(238, 238, 238, 0);
     color: #FDFCFD;
     /*border-bottom-color: rgba(238,238,238, 0.07);*/
     /*box-shadow: inset 0 5px 10px rgba(0,0,0,.075);*/
 }
 
-
-
-.fg{
-  margin-top:4px;
-  width:218px;
-}
-
 .wrapper input[type="button"] {
     position: relative;
     font-family: 'FontAwesome';
+    margin-top: 4px;
+    border-color: rgba(0,0,0,0);
 }
 
 #devider{
@@ -93,6 +133,7 @@ body{
   min-width:440px;
   height: 20px;
   margin:auto;
+  margin-bottom: 4px;
 }
 #devider>ul{
   width:440px;
@@ -110,15 +151,14 @@ body{
   color:#ffffff;
   text-shadow : 0 1px 4px rgba(0,0,0,0.33);
 }
-#sign-up{
-  margin-top:5px;
-  border: none;
+#sign-up-logo{
   background-color: #4ABA51;
-  height: 25px;
-  width:440px;
+}
+#sign-up-login{
+  background-color: #4ABA51;
 }
 
-#div-exbutton{
+#div-ex{
   width: 440px;
   margin:auto
 }
@@ -131,11 +171,12 @@ body{
     color: #444444;
     height: 40px !important;
     padding: 6px 16px;
-    width: 400px !important;
+    margin-top: 2px;
+    /*width: 400px !important;*/
 }
 
 .subscribe{
-  margin-top:250px;
+  margin-top:100px;
   text-align: -webkit-center;
 }
 
@@ -161,8 +202,13 @@ body{
   color:#ffffff;
   text-shadow : 0 1px 4px rgba(0,0,0,0.33);
   text-align: center;
-  margin-top: 140px;
+  margin-top: 100px;
   font-family: 'NanumGothic';
+  word-break: keep-all;
+}
+.wise{
+  width:50%;
+  margin: auto;
 }
 
 .btn-danger.btn-fill {
@@ -264,7 +310,6 @@ body{
 /*****************footer*****************/
 footer{                         /*footer에 있는 txt 오른쪽으로 정렬*/
   text-align: right;
-  height: 100px ;
   vertical-align: bottom;
   /*background-color: #B2EBF4;*/
 }
