--- a/views/bucket_list.ejs
+++ b/views/bucket_list.ejs
@@ -18,31 +18,39 @@
 
     <body>
       <header>
-        <div id="header-back">
-          <nav id="navupdown" class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
-            <div class="container">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
-                  <span class="sr-only">navigation of toggle</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
+          <nav id="navupdown" class="navbar navbar-transparent navbar-fixed-top" role="navigation">
+              <div class="container">
+                  <div class="navbar-header">
+                      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
+                          <span class="sr-only">navigation of toggle</span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                          <span class="icon-bar"></span>
+                      </button>
+                  </div>
+                  <div id="navbar-target" class="navbar-collapse in">
+                      <ul id="navbar" class="nav navbar-nav">
+                          <li>
+                              <!-- <a href="/"><img src="/imgs/logo" class="index_nav" /></a> -->
+                              <a href="/"><h1 id="side-logo">Handalart</h1></a>
+                              <img id="divider" src="/imgs/divider.png" alt="menu divider">
+                          </li>
+
+                          <li style="padding-top:30px">
+                              <a href="/bucket" onmouseover="hovering(this, '/imgs/bucket')" onmouseout="hoveringOut(this, '/imgs/bucket')"><img src="/imgs/bucket" class="index_nav" /></a>
+                          </li>
+                          <li>
+                              <a href="/mandal" onmouseover="hovering(this, '/imgs/mandal')" onmouseout="hoveringOut(this, '/imgs/mandal')"><img src="/imgs/mandal" class="index_nav" /></a>
+                          </li>
+                          <li>
+                              <a href="/calendar" onmouseover="hovering(this, '/imgs/calendar')" onmouseout="hoveringOut(this, '/imgs/calendar')"><img src="/imgs/calendar" class="index_nav" /></a>
+                          </li>
+                      </ul>
+                  </div>
               </div>
-            <div id="navbar-target" class="navbar-collapse in">
-              <ul id="navbar-logo" class="nav navbar-nav navbar-left">
-                <li><a href="/"><img src="/imgs/logo" class="index_nav"/></a></li>
-              </ul>
-            <!-- <li><a href="/login"><img src="/imgs/login" id="login"/></a><li/> -->
-              <ul id="navbar" class="nav navbar-nav navbar-right">
-                <li><a href="/bucket"><img src="/imgs/bucket" class="index_nav"/></a></li>
-                <li><a href="/mandal"><img src="/imgs/mandal" class="index_nav"/></a></li>
-                <li><a href="/calendar"><img src="/imgs/calendar" class="index_nav"/></a></li>
-              </ul>
-            </div>
-         </div>
-         </nav>
+          </nav>
       </header>
+      <div id="content-wrapper">
     <section>
 
       <button type="button" id="delete" class="tableBtn">삭제</button>
@@ -78,6 +86,7 @@
     <button type="button" name="button">아니오</button>
   </div>
     </section>
+  </div>
     <footer></footer>
     </div>
     <div id="black-cover"></div>
