--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <script src="/vendor/jquery-1.10.2.min.js"></script>
     <script src="/vendor/jquery-ui.js"></script>
@@ -12,138 +13,170 @@
     <script type="text/javascript" src="/js/nav.js"></script>
     <script type="text/javascript" src="/js/vendor/bootstrap.min.js"></script>
     <title>만다라트</title>
-    <!--<script>
-      var message = JSON.parse(<%- JSON.stringify(message) %>);
+</head>
 
-      if (message) 
-        $("#form-container").append('<h1>' + message[0] + '</h1>');
-    </script>-->
-
-  </head>
-  
-  <body>
+<body>
     <div id="else-container">
-    <header>
-      <nav id="navupdown" class ="navbar navbar-transparent navbar-fixed-top" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
-              <span class="sr-only">navigation of toggle</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-        <div id="navbar-target" class="navbar-collapse in">
-          <ul id="navbar-logo" class="nav navbar-nav navbar-left">
-            <li><a href="/"><img src="/imgs/logo" class="index_nav"/></a></li>
-          </ul>
-        <!-- <li><a href="/login"><img src="/imgs/login" id="login"/></a><li/> -->
-          <ul id="navbar" class="nav navbar-nav navbar-right">
-            <li><a href="/bucket"><img src="/imgs/bucket" class="index_nav"/></a></li>
-            <li><a href="/mandal"><img src="/imgs/mandal" class="index_nav"/></a></li>
-            <li><a href="/calendar"><img src="/imgs/calendar" class="index_nav"/></a></li>
-          </ul>
-        </div>
-     </div>
-     </nav>
-    </header>
+        <header>
+            <nav id="navupdown" class="navbar navbar-transparent navbar-fixed-top" role="navigation">
+                <div class="container">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-target">
+                            <span class="sr-only">navigation of toggle</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                    </div>
+                    <div id="navbar-target" class="navbar-collapse in">
+                        <ul id="navbar" class="nav navbar-nav">
+                            <li>
+                                <!-- <a href="/"><img src="/imgs/logo" class="index_nav" /></a> -->
+                                <a href="/"><h1 id="side-logo">Handalart</h1></a>
+                                <img id="divider" src="/imgs/divider.png" alt="menu divider">
+                            </li>
+
+                            <li style="padding-top:30px">
+                                <a href="/bucket" onmouseover="hovering(this, '/imgs/bucket')" onmouseout="hoveringOut(this, '/imgs/bucket')"><img src="/imgs/bucket" class="index_nav" /></a>
+                            </li>
+                            <li>
+                                <a href="/mandal" onmouseover="hovering(this, '/imgs/mandal')" onmouseout="hoveringOut(this, '/imgs/mandal')"><img src="/imgs/mandal" class="index_nav" /></a>
+                            </li>
+                            <li>
+                                <a href="/calendar" onmouseover="hovering(this, '/imgs/calendar')" onmouseout="hoveringOut(this, '/imgs/calendar')"><img src="/imgs/calendar" class="index_nav" /></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
 
-    <div class="content">
-      <div class="subscribe">
-        <!-- <div class="row"> -->
-          <div id="form-container" class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3">
-            <form action="/auth/login" class="form-inline form-login" role="form" id="login_form">
-              <div class="form-group">
-                <div class="input-group">
-                  <label for="login_id" class="fa fa-user"></label>
-                  <input type="text" name="id" id="login_id" class="form-control transparent" placeholder="아이디">
-                </div>
-                <div class="input-group">
-                  <label for="login_password" class="fa fa-lock"></label>
-                  <input type="password" name="password" id="login_password" class="form-control transparent" placeholder="비밀번호">
-                </div>
-              </div>
-              
-              <!-- <div id="div-button">
+        <div id="content-wrapper">
+            <div class="wise">
+                <h4 id="wise">
+        미래를 예측하는 방법은 미래를 창조하는 것이다
+      </h4>
+            </div>
+            <div class="content">
+                <div class="subscribe">
+                    <!-- <div class="row"> -->
+                    <!-- <div id="form-container" class="col-md-4 col-md-offset-4 col-sm6-6 col-sm-offset-3"> -->
+                    <div id="form-container" class="">
+                        <form action="/auth/login" method="POST" class="form-inline form-login" role="form">
+                            <div class="form-group">
+                                <div id="div-ex">
+                                    <!-- <div style="width:218px; margin:0;float:right" class="wrapper"> -->
+                                    <div class="wrapper">
+                                        <input type="button" id="google-logo" class="btn btn-danger btn-fill login-logo fa fa-google-plus" onclick="location.href='/auth/google'" value="&#xf0d5"><!----><input type="button" id="google-login" class="btn btn-danger btn-fill login-content fg fa fa-google-plus" onclick="location.href='/auth/google'" value="구글 계정으로 로그인">
+                                    </div>
+                                    <!-- <div style="width:218px; marign:0;" class="wrapper"> -->
+                                    <div class="wrapper">
+                                        <input type="button" id="facebook-logo" class="btn btn-primary btn-fill login-logo fa fa-facebook" onclick="location.href='/auth/facebook'" value="&#xf09a"><!----><input type="button" id="facebook-login" class="btn btn-primary btn-fill login-content fg fa fa-facebook" onclick="location.href='/auth/facebook'" value="페이스북 계정으로 로그인">
+                                    </div>
+
+                                    <div id="devider">
+                                        <ul class="list-unstyled list-inline">
+                                            <li>
+                                                <hr style="width:155px;">
+                                            </li>
+                                            <li><span id="or">or</span></li>
+                                            <li>
+                                                <hr style="width:155px;">
+                                            </li>
+                                        </ul>
+                                    </div>
+
+                                    <div id="first-input" class="input-group">
+                                        <label for="login_id" class="fa fa-user"></label><!----><input type="text" name="id" id="login_id" class="form-control transparent" placeholder="아이디">
+                                    </div>
+                                    <div id="sencond-input" class="input-group">
+                                        <label for="login_password" class="fa fa-lock"></label><!----><input type="password" name="password" id="login_password" class="form-control transparent" placeholder="비밀번호">
+                                    </div>
+
+                                    <div id="div-button">
+                                        <button id="login" type="submit" class="fg btn btn-danger btn-fill">로그인</button>
+                                    </div>
+                                    <!-- <div style="width:218px; marign:0;" class="wrapper"> -->
+                                    <div class="wrapper">
+                                        <!-- <input type="button" id="sign-up-logo" class="btn btn-primary btn-fill fa fa-userplus login-logo" onclick="" data-target="#layerpop" data-toggle="modal" value="&#xf234"><!----><!--<input type="button" id="sign-up-login" class="btn btn-primary btn-fill fg fa fa-userplus login-content" onclick="" data-target="#layerpop" data-toggle="modal" value="회원가입"> -->
+                                        <input id="star" type="button" id="sign-up-login" class="btn btn-primary btn-fill fg fa fa-userplus" onclick="" data-target="#layerpop" data-toggle="modal" value="★회원가입☆">
+
+                                    </div>
+                                </div>
+                                <!-- <label class="sr-only" for="">로그인</label> -->
+
+                            </div>
+                            <!-- <div id="div-button">
                 <button id="login" type="submit" class="btn btn-danger btn-fill">로그인</button>
               </div> -->
-              <!-- <div id="devider">
-                <ul class="list-unstyled list-inline">
-                  <li><hr style="width:155px;"></li>
-                  <li><span id="or">or</span></li>
-                  <li><hr style="width:155px;"></li>
-                </ul>
-              </div> -->
-              <div id="div-exbutton">
-                <div style="width:218px; margin:0;float:right" class="wrapper">
-                <input type="button" id="google" class="btn btn-danger btn-fill fg fa fa-google-plus" onclick="location.href='/auth/google'" value="&#xf0d5">
-                </div>
-                <div style="width:218px; marign:0;" class="wrapper">
-                  <input type="button" id="facebook" class="btn btn-primary btn-fill fg fa fa-facebook" onclick="location.href='/auth/facebook'" value="&#xf09a">
-                </div>
-                <div id="div-button">
-                  <button id="login" type="submit" class="btn btn-danger btn-fill">로그인</button>
-                </div>
-                <div style="width:218px; marign:0;" class="wrapper">
-                  <input type="button" id="sign-up" class="btn btn-primary btn-fill fg fa fa-userplus" onclick="" data-target="#layerpop" data-toggle="modal" value="&#xf234">
-                </div>
-              </div>
-            </form>
-          </div>
-        <!-- </div> -->
-      </div>
-      </div>
-      <div class="wise">
-        <h4 id="wise">
-          '미래를 예측하는 방법은 미래를 창조하는 것이다.'
-        </h4>
-      </div>
 
-    <footer>
-      <small>by- daidai</small>
-    </footer>
 
-<div class="modal fade" id="layerpop" >
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div id="siba"></div>
+                        </form>
+                    </div>
+                    <!-- </div> -->
+                </div>
+            </div>
 
-      <div class="modal-body">
-        <form action="/auth/regist" class="form-inline form-login" role="form" id="regist" method="POST">
-          <div class="signup-inner">
-            <label for="modal_id"></label>
-            <input type="text" name="id" id="modal_id" class="form-control transparent modal-input" placeholder="아이디">
-          </div>
-          <div class="signup-inner">
-            <label for="modal_email"></label>
-            <input type="email" name="email" id="modal_email" class="form-control transparent modal-input" placeholder="이메일">
-          </div>
-          <div class="signup-inner">
-            <label for="login_password"></label>
-            <input type="password" name="password" id="modal_password" class="form-control transparent modal-input" placeholder="비밀번호">
-          </div>
-          <div class="signup-inner">
-            <label for="modal_pwck"></label>
-            <input type="password" name="passwordck" id="modal_pwck" class="form-control transparent modal-input" placeholder="비밀번호 확인">
-          </div>
-          <div class="signup-inner">
-            <label for="modal_displayName"></label>
-            <input type="text" name="displayname" id="modal_displayName" class="form-control transparent modal-input" placeholder="닉네임">
-          </div>
+        </div>
 
-          <div class="signup-inner" id="modal_sivbal">
-            <label for="modal_submit"></label>
-            <input type="submit" name="submit" id="modal_submit" class="form-control transparent modal-input" value="회원가입">
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
+        <footer>
+            <small>by- daidai</small>
+        </footer>
+
+        <div class="modal fade" id="layerpop">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div id="siba"></div>
+
+                    <!-- header <-->
+                    <!-- <div class="modal-header"> -->
+                    <!-- 닫기(x) 버튼 -->
+                    <!-- <button type="button" class="close" data-dismiss="modal">×</button> -->
+                    <!-- header title -->
+                    <!-- <h3 class="modal-title">계정 생성</h3> -->
+                    <!-- </div> -->
+                    <!-- body -->
+                    <div class="modal-body">
+                        <form action="/auth/regist" class="form-inline form-login" role="form" id="regist" method="POST">
+                        <div class="signup-inner">
+                            <label for="modal_id"></label>
+                            <input type="text" name="id" id="modal_id" class="form-control transparent modal-input" placeholder="아이디">
+                        </div>
+                        <div class="signup-inner">
+                            <label for="modal_email"></label>
+                            <input type="email" name="email" id="modal_email" class="form-control transparent modal-input" placeholder="이메일">
+                        </div>
+                        <div class="signup-inner">
+                            <label for="login_password"></label>
+                            <input type="password" name="password" id="modal_password" class="form-control transparent modal-input" placeholder="비밀번호">
+                        </div>
+                        <div class="signup-inner">
+                            <label for="modal_pwck"></label>
+                            <input type="password" name="passwordck" id="modal_pwck" class="form-control transparent modal-input" placeholder="비밀번호 확인">
+                        </div>
+                        <div class="signup-inner">
+                            <label for="modal_displayName"></label>
+                            <input type="text" name="displayname" id="modal_displayName" class="form-control transparent modal-input" placeholder="닉네임">
+                        </div>
+
+                        <div class="signup-inner" id="modal_sivbal">
+                            <label for="modal_submit"></label>
+                            <input type="submit" name="submit" id="modal_submit" class="form-control transparent modal-input" value="회원가입">
+                        </div>
+                        </form>
+                    </div>
+                    <!-- Footer -->
+                    <!-- <div class="modal-footer"> -->
+                    <!-- Footer -->
+                    <!-- <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button> -->
+                    <!-- </div> -->
+                </div>
+            </div>
+        </div>
     </div>
     <div id="black-cover"></div>
     <div id="bg">
-  </body>
+</body>
+
 </html>
