--- a/public/css/fullcalendar.css
+++ b/public/css/fullcalendar.css
@@ -1,3 +1,5 @@
+
+
 #calendar{
 	margin-top: 40px !important;
 	width:80% !important;
@@ -363,6 +365,8 @@ a.fc-event,
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 	}
 
 .fc-event-time{
@@ -371,10 +375,13 @@ a.fc-event,
 
 .fc-event-time,
 .fc-event-title {
-		padding-right: 1px;
-		padding-left: 3px;
-		font-family: 'NanumGothic'
-	}
+	padding-right: 1px;
+	padding-left: 3px;
+	font-family: 'NanumGothic';
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
 
 .fc .ui-resizable-handle {
 	display: block;
