--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,96 @@
     <script type="text/javascript" src="/js/nav.js"></script>
     <script type="text/javascript" src="/js/vendor/bootstrap.min.js"></script>
     <title>만다라트</title>
+
+    <script type="text/javascript">
+
+        $(document).ready(function() {
+
+            var message = '<%= message %>';
+
+            console.log("message : " + message);
+
+            var flash = {
+
+                exists: function() {
+                    return ($('#flash').length > 0);
+                },
+
+                show: function(msg) {
+                    var message;
+
+                    // Create the flash div if it does not exist
+                    if (!flash.exists()) {
+                        message = $('<div id="flash"></div>').prependTo('body');
+                    } else {
+                        message = $('#flash');
+                    }
+
+                    // Hide message when it's clicked on
+                    $('body').delegate('#flash', 'click', function() {
+                        flash.hide();
+                    });
+
+                    // Set the message if one was specified
+                    if (msg) {
+                        message.html(msg);
+                    }
+
+                    // Display the flash
+                    
+                    $('#flash').css('z-index', '1')
+                    .slideDown(1000);
+
+                    // Clear the timeout if one is set
+                    clearTimeout(flash.timeout);
+
+                    // Hide the message after 5 seconds
+                    flash.timeout = setTimeout(function() {
+                        flash.hide();
+                    }, 5000);
+                },
+
+                hide: function() {
+                    // Hide the flash
+                    $('#flash').slideUp();
+
+                    // Clear the timeout if it exists
+                    if (flash.timeout) {
+                        clearTimeout(flash.timeout);
+                    }
+                },
+
+                // Flash message timeout
+                timeout: null
+            };
+
+            if ( message.length ) {
+                if (message == 'Missing credentials') {
+                    console.log('what is missing');
+                    message = '아이디 또는 비밀번호를 입력해주세요';
+                }
+
+                flash.show(message);
+            }
+            else {
+                message = '한다라트';
+
+                flash.show(message);
+            }
+
+            // Display the flash message if one exists
+            /*if (flash.exists()) {
+                flash.show(message);
+            }*/
+
+            /*$('#login').click(function() {
+                flash.show('sdfsdf');
+                return false;
+            });*/
+
+            console.log(message);
+        });
+    </script>
 </head>
 
 <body>
@@ -51,13 +141,14 @@
             </nav>
         </header>
 
-
+        <div class="flash"></div>
         <div id="content-wrapper">
             <div class="wise">
                 <h4 id="wise">
         미래를 예측하는 방법은 미래를 창조하는 것이다
-      </h4>
+                </h4>
             </div>
+            
             <div class="content">
                 <div class="subscribe">
                     <!-- <div class="row"> -->
