--- a/public/css/bucket.css
+++ b/public/css/bucket.css
@@ -1,110 +1,29 @@
-section{
-  /*clear: both;*/
-  padding-top: 120px;
-}
-
-.tableBtn{
-  margin-top: 30px;
-}
-
-.checkbox{
-  border-style: none;
-}
-
-#tmain{
-  height: 100%;
-  width: 850px;
-  margin: auto;
-  border-collapse: collapse;
-  color: rgb(255,255,255);
-  font-family: 'NanumGothic';
-  text-shadow: 0 1px 4px rgba(0,0,0,0.3);
-  text-align: center !important;
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
-  border-left-color: #ffffff;
-  border-right-color: #ffffff;
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-#tmain>.input{
-}
-
-thead{
-  text-align: center;
-}
-
-td{
-  padding: 0px 0px 0px 0px;
-  text-align: center;
-  height: 23.75px;
-}
-
-.comp_check{
-  width: 100%;
-  height: 24px;
-}
-
-input{
-  width: 99%;
-  height: 99%;
-  margin: 0 0 0 0;
-  border: none;
-}
-
-.button {
-  float: left;
-  margin-left: 42%;
-  display: inline-block;
-}
-.tableBtn{
-  display:inline-block;
-  float: right;
-  margin-right: 1.5%;
-  width: 80px;
-  height: 80px;
-  border-radius: 90px;
-  font-size: 25px;
-  border: none;
-  color: #fff;
-  background-color: #5CD1E5;
-  transition-duration: 0.5s;
-  }
-.input{
-  background-color: rgba(0,0,0,0);
-}
-#isComp{
-  background-color: rgba(0, 0, 0,0);
-  width: 100%;
-  height: 23.75px;
-  border-style: none;
-}
-#isComp:hover{
-  background-color: rgba(213, 213, 213, 0.5);
-  cursor: pointer;
-}
-.tableBtn:hover{
-  box-shadow: 0px 3px 2px #d5d5d5;
-  background-color: #EEEEEE;
-  color: #5CD1E5;
-  cursor: pointer;
-}
-.ui-button{
-  float: right;
-
-}
-.ui-button:hover{
-  cursor: pointer;
-  background-color: #000;
-}
-
-.ui-dialog-titlebar{
-  text-align: center;
-  background-color: #fff;
-  border-radius: 5px;
-}
-.ui-dialog{
+li{
+  list-style: none;
   border: 1px solid #000;
-  border-radius: 5px;
-  background-color: rgba(213, 213, 213, 0.5);
+  width: 60%;
+  padding: 20px;
+}
+.show,.edit,.complete{
+  float: right;
+}
+.button{
+  height: 20px;
+}
+.delete{
+  float: right;
+}
+.desc>pre{
+  text-align: left;
+  margin-top: 20px;
+  background-color: #fff;
+}
+#append{
+  float: right;
+}
+#active, #complete{
+  height: 46px;
+}
+hr{
+  margin-top: 5px;
 }
