--- a/views/fullcalendar.ejs
+++ b/views/fullcalendar.ejs
@@ -30,6 +30,7 @@
 
 	<link href='/css/fullcalendar.css' rel='stylesheet' type="text/css">
 	<link href='/css/fullcalendar.print.css' rel='stylesheet' media='print' type="text/css">
+	<link rel="stylesheet" href="/css/modal.css">
 
 	<script src='/vendor/moment.min.js'></script>
 	<script src='/vendor/jquery-ui.js'></script>
